fix(view): remove dark mode background

--- a/src/style.css
+++ b/src/style.css
@@ -26,8 +26,6 @@ body {
   height: 100vh;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    background-color: #e9e9e9;
-  }
+:root {
+  background-color: #e9e9e9;
 }
